--- a/src/scss/base/_mixins.scss
+++ b/src/scss/base/_mixins.scss
@@ -48,12 +48,12 @@
 }
 
 @mixin contenedor {
-    width: min(95%, 120rem);
+    width: min(95%, 140rem);
     margin: 0 auto;
 }
 
 @mixin contenedor-sm {
-    width: min(95%, 60rem);
+    width: min(95%, 70rem);
     margin: 0 auto;
 }
 
@@ -67,4 +67,68 @@
     @include headings();
     margin: 6rem 0 3rem 0;
     text-align: center;
+}
+
+@mixin texto-fluido($min, $avg, $max) {
+    font-size: clamp($min, $avg ,$max);
+}
+
+@mixin texto-degradado($inicio, $final) {
+    background-image: linear-gradient(to right, $inicio, $final);
+    background-clip: text;
+    color: transparent;
+    display: inline-block;
+}
+
+@mixin logo {
+    color: v.$blanco;
+    text-align: center;
+    margin-bottom: 2rem;
+
+    @include desktop() {
+        text-align: left;
+        margin: 0;
+    }
+}
+
+@mixin menu-social($color, $size) {
+    &__enlace {
+        &::before {
+            color: $color;
+            font-size: $size;
+            display: inline-block;
+            font-style: normal;
+            text-rendering: auto;
+            -webkit-font-smoothing: antialiased;
+            font-family: "Font Awesome 6 Brands";
+        }
+
+        &[href*="https://facebook.com"]::before {
+            content: "\f39e";
+        }
+
+        &[href*="https://github.com"]::before {
+            content: "\f09b";
+        }
+        
+        &[href*="https://tiktok.com"]::before {
+            content: "\e07b";
+        }
+
+        &[href*="https://instagram.com"]::before {
+            content: "\f16d";
+        }
+
+        &[href*="https://youtube.com"]::before {
+            content: "\f167";
+        }
+        
+        &[href*="https://twitter.com"]::before {
+            content: "\f099";
+        }
+    }
+
+    &__ocultar {
+        display: none;
+    }
 }
