Vista y routeo del dashboard, y correcion de un error al confirmar una cuenta
- Se agrego la vista y el routeo del dashboard
- Se corrigio un error al confirmar una cuenta

Siguientes paso:
- Crear la vista de ponentes

--- a/src/scss/base/_mixins.scss
+++ b/src/scss/base/_mixins.scss
@@ -132,3 +132,17 @@
         display: none;
     }
 }
+
+@mixin enlace {
+    color: v.$blanco;
+    font-size: 1.6rem;
+    text-transform: uppercase;
+    font-weight: v.$bold;
+    background-color: transparent;
+    border: none;
+    cursor: pointer;
+    &:hover {
+        color: v.$azul;
+    }
+    
+}
