--- a/src/scss/UI/header/_header.scss
+++ b/src/scss/UI/header/_header.scss
@@ -39,14 +39,7 @@
     }
 
     &__enlace {
-        color: v.$blanco;
-        font-size: 1.6rem;
-        text-transform: uppercase;
-        font-weight: v.$bold;
-
-        &:hover {
-            color: v.$azul;
-        }
+        @include m.enlace;
     }
 
     &__contenido {
