--- a/src/scss/UI/formulario/_formulario.scss
+++ b/src/scss/UI/formulario/_formulario.scss
@@ -4,12 +4,30 @@
 .formulario {
     display: flex;
     flex-direction: column;
+    padding: 3rem;
 
     &__campo {
         display: flex;
         flex-direction: column;
         gap: 1rem;
-        margin: 1.5rem 0;
+        margin: 2.5rem 0;
+    }
+
+    &__contenedor-icono {
+        display: flex;
+    }
+
+    &__icono {
+        background-color: v.$gris-oscuro;
+        width: 4rem;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        border-radius: .5rem 0 0 .5rem;
+        i {
+            color: v.$blanco;
+            font-size: 2rem;
+        }
     }
 
     &__label {
@@ -22,11 +40,32 @@
         padding: 1rem;
         border: 1px solid darken($color: v.$gris, $amount: 20);
         border-radius: .5rem;
+        
+        &--file {
+            border: none;
+        }
+
+        &--social {
+            border-radius: 0 .5rem .5rem 0;
+            width: 100%;
+        }
     }
 
     &__submit {
         @include m.boton(v.$azul, v.$blanco);
         width: auto;
         align-self: flex-start;
+    }
+
+    &__fieldset {
+        border: 0;
+        padding: 0;
+        margin-top: 2rem;
+    }
+
+    &__legend {
+        color: v.$gris;
+        font-size: 2.2rem;
+        display: block;
     }
 }
