--- a/src/scss/base/_mixins.scss
+++ b/src/scss/base/_mixins.scss
@@ -52,6 +52,11 @@
     margin: 0 auto;
 }
 
+@mixin contenedor-md {
+    width: min(95%, 80rem);
+    margin: 0 auto;
+}
+
 @mixin contenedor-sm {
     width: min(95%, 70rem);
     margin: 0 auto;
@@ -145,4 +150,8 @@
         color: v.$azul;
     }
     
+}
+
+@mixin shadow {
+    box-shadow: rgba(50, 50, 93, 0.25) 0px 13px 27px -5px, rgba(0, 0, 0, 0.3) 0px 8px 16px -8px;
 }
