--- a/src/scss/base/_mixins.scss
+++ b/src/scss/base/_mixins.scss
@@ -155,3 +155,32 @@
 @mixin shadow {
     box-shadow: rgba(50, 50, 93, 0.25) 0px 13px 27px -5px, rgba(0, 0, 0, 0.3) 0px 8px 16px -8px;
 }
+
+@mixin reset-lista {
+    margin: 0;
+    padding: 0;
+    list-style: none;
+}
+
+@mixin tags {
+    @include reset-lista();
+    display: flex;
+    flex-wrap: wrap;
+    gap: 1.5rem;
+    margin-top: 1.5rem;
+
+    > li {
+        background-color: v.$azul;
+        color: v.$blanco;
+        padding: 1rem;
+        border-radius: .4rem;
+        font-size: 1.4rem;
+        cursor: pointer;
+        font-weight: v.$bold;
+        transition: ease .3s;
+
+        &:hover {
+            background-color: darken($color: v.$azul, $amount: 10);
+        }
+    }
+}
