- Los ponentes se insertan en la base de datos

--- a/src/scss/admin/_dashboard.scss
+++ b/src/scss/admin/_dashboard.scss
@@ -58,6 +58,10 @@
         width: auto;
     }
 
+    &__alertas {
+        @include m.contenedor-md;
+    }
+
     &__menu {
         display: flex;
         flex-direction: column;
