--- a/src/scss/UI/alertas/_alertas.scss
+++ b/src/scss/UI/alertas/_alertas.scss
@@ -8,7 +8,7 @@
     margin: 1rem 0;
     font-size: 1.3rem;
     font-weight: v.$bold;
-
+    letter-spacing: .2rem;
     &--error {
         background-color: lighten($color: v.$rojo, $amount: 60);
         border-left: 5px solid v.$rojo;
