- Se agreo la funcionalidad de editar ponentes
Siguientes pasos:
- Agregar la funcionalidad de eliminar ponentes

--- a/src/scss/UI/formulario/_formulario.scss
+++ b/src/scss/UI/formulario/_formulario.scss
@@ -72,4 +72,11 @@
     &__listado {
         @include m.tags;
     }
+
+    &__imagen {
+        width: 100%;
+        margin: 0 auto;
+        max-width: 40rem;
+        display: block;
+    }
 }
