Vista de ponentes hecha
- Los ponentes se pueden ver en la vista de admin
- Se pueden crear nuevos ponentes
- Se pueden editar los ponentes

Siguientes Pasos:
- Crear las primera paginas publicas

--- a/src/scss/UI/formulario/_formulario.scss
+++ b/src/scss/UI/formulario/_formulario.scss
@@ -36,8 +36,11 @@
         color: rgba($color: v.$negro, $alpha: .8);
     }
 
-    &__input {
+    &__input,
+    &__select,
+    &__textarea {
         padding: 1rem;
+        resize: none;
         border: 1px solid darken($color: v.$gris, $amount: 20);
         border-radius: .5rem;
         
