--- a/src/scss/base/_mixins.scss
+++ b/src/scss/base/_mixins.scss
@@ -74,6 +74,14 @@
     text-align: center;
 }
 
+@mixin descripcion-pagina {
+    text-align: center;
+    font-size: 1.8rem;
+    font-weight: v.$delgada;
+    color: v.$gris-oscuro;
+    margin-bottom: 5rem;
+}
+
 @mixin texto-fluido($min, $avg, $max) {
     font-size: clamp($min, $avg ,$max);
 }
@@ -182,5 +190,16 @@
         &:hover {
             background-color: darken($color: v.$azul, $amount: 10);
         }
+    }
+}
+
+@mixin card {
+    border: 1px solid lighten($color: v.$gris, $amount: 10);
+    padding: 3rem;
+
+    &__nombre {
+        font-weight: v.$black;
+        font-size: 2.6rem;
+        margin: 2rem 0;
     }
 }
