--- a/src/scss/base/_mixins.scss
+++ b/src/scss/base/_mixins.scss
@@ -48,16 +48,19 @@
 }
 
 @mixin contenedor {
+    overflow: hidden;
     width: min(95%, 140rem);
     margin: 0 auto;
 }
 
 @mixin contenedor-md {
+    overflow: hidden;
     width: min(95%, 80rem);
     margin: 0 auto;
 }
 
 @mixin contenedor-sm {
+    overflow: hidden;
     width: min(95%, 70rem);
     margin: 0 auto;
 }
@@ -112,31 +115,32 @@
             display: inline-block;
             font-style: normal;
             text-rendering: auto;
+            margin-left: .4rem;
             -webkit-font-smoothing: antialiased;
             font-family: "Font Awesome 6 Brands";
         }
 
-        &[href*="https://facebook.com"]::before {
+        &[href*="facebook.com"]::before {
             content: "\f39e";
         }
 
-        &[href*="https://github.com"]::before {
+        &[href*="github.com"]::before {
             content: "\f09b";
         }
         
-        &[href*="https://tiktok.com"]::before {
+        &[href*="tiktok.com"]::before {
             content: "\e07b";
         }
 
-        &[href*="https://instagram.com"]::before {
+        &[href*="instagram.com"]::before {
             content: "\f16d";
         }
 
-        &[href*="https://youtube.com"]::before {
+        &[href*="youtube.com"]::before {
             content: "\f167";
         }
         
-        &[href*="https://twitter.com"]::before {
+        &[href*="twitter.com"]::before {
             content: "\f099";
         }
     }
