Los usuarios pueden registra su boleto gratis

--- a/src/scss/paginas/_paquetes.scss
+++ b/src/scss/paginas/_paquetes.scss
@@ -10,6 +10,11 @@
             @include m.grid(3, 3rem);
         }
     }
+
+    &__submit {
+        margin-top: 3rem;
+        @include m.boton(v.$azul, v.$blanco);
+    }
 }
 
 .paquete {
