- El usuario puede escoger su plan - Se implemento el pago con paypal SDK - La informacion del plan se guarda en la base de datos

--- a/src/scss/paginas/_paquetes.scss
+++ b/src/scss/paginas/_paquetes.scss
@@ -39,7 +39,7 @@
 
     &__precio {
         font-size: 6rem;
-        margin: 3rem 0 0 0;
+        margin: 3rem  0;
         color: v.$azul;
         text-align: center;
         font-weight: v.$black;
